# pyreasoner

./: .coveragerc  .gitignore  .travis.yml  LICENSE.rst  MANIFEST.in  README.rst  requirements-dev.txt  requirements-lint.txt  setup.cfg  tox.ini
pyreasoner/: __init__.py  expressions.py  sets.py  utils.py
pyreasoner/expressions/: __init__.py
pyreasoner/tests/: __init__.py  strategies.py  test_expressions.py  test_sets.py
