[metadata]
name = pyreasoner
author = Lucas Wiman
author-email = lucas.wiman@gmail.com
summary = Solving constraints of various kinds in python
description-file = README.rst
home-page = https://github.com/lucaswiman/pyreasoner
requires-python = >=2.7,<3
license = Apache 2
classifier =
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Development Status :: 4 - Beta
    Operating System :: OS Independent

[coverage:run]
branch = True
source = pyreasoner

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
show_missing = 1

[nosetests]
cover-min-percentage = 100
with-coverage = 1
cover-package = pyreasoner
cover-tests = 1

[files]
packages = pyreasoner

[flake8]
max-complexity = 10
max-line-length = 99

[pbr]
skip_authors = true
skip_changelog = true

[global]
test_suite = nose.collector
